--- a/Space/Assembly-CSharp.csproj
+++ b/Space/Assembly-CSharp.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\AutoDestroy.cs" />
+     <Compile Include="Assets\Scripts\EmissionWave.cs" />
+     <Compile Include="Assets\Scripts\Floor.cs" />
      <Compile Include="Assets\Scripts\Follow.cs" />
      <Compile Include="Assets\Scripts\Health.cs" />
      <Compile Include="Assets\Scripts\Laser.cs" />
